--- a/style.css
+++ b/style.css
@@ -22,16 +22,23 @@
 
 .no-bullet-points {
   list-style-type: none;
+  margin-left: -40px;
 }
 
 .card {
   border: 2px outset;
   margin: 5px;
   padding: 10px;
+  width: 47%;
+  height: 120px;
   float: left;
-  width: 48%;
-  min-height:100px;
-  max-height: 150px;
+  -webkit-box-shadow: 4px 4px 5px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow:    4px 4px 5px 0px rgba(50, 50, 50, 0.75);
+  box-shadow:         4px 4px 5px 0px rgba(50, 50, 50, 0.75);
+}
+
+.card a{
+  font-size: 16px;
 }
 
 .title-label {
