--- a/style.css
+++ b/style.css
@@ -1,25 +1,3 @@
-.sprint-goals li {
-    font-weight:normal;
-    font-size: 16px;
-    padding-left: 0px;
-}
-
-.sprint-goals > ul {
-  padding-left: 10px;
-  list-style-type: none;
-}
-
-.sprint-goals > ul > li {
-  margin-top: 10px;
-  font-weight: bold;
-  font-size: 18px;
-  padding-left: 0px;
-}
-
-.sprint-goals > ul > li > ul {
-  padding-left: 20px;
-}
-
 .no-bullet-points {
   list-style-type: none;
   margin-left: -40px;
@@ -42,7 +20,7 @@
 }
 
 .title-label {
-  position: absolute;
+  position: fixed;
   right: 10px;
   bottom: 10px;
   margin: 0px;
@@ -50,4 +28,26 @@
 
 h2 {
   margin-bottom: 20px;
+}
+
+.sprint-goals li {
+  font-size: 14px;
+  font-weight:normal;
+  padding-left: 0px;
+}
+
+.sprint-goals > ul {
+  padding-left: 10px;
+  list-style-type: none;
+}
+
+.sprint-goals > ul > li {
+  font-size: 16px;
+  margin-top: 10px;
+  font-weight: bold;
+  padding-left: 0px;
+}
+
+.sprint-goals > ul > li > ul {
+  padding-left: 20px;
 }
