--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
   margin: 5px;
   padding: 10px;
   width: 47%;
+  min-width: 300px;
+  max-width:400px;
   height: 120px;
   float: left;
   -webkit-box-shadow: 4px 4px 5px 0px rgba(50, 50, 50, 0.75);
