--- a/style.css
+++ b/style.css
@@ -22,10 +22,11 @@
 }
 
 .title-label {
-  position: fixed;
-  right: 270px;
-  bottom: 10px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
   margin: 0px;
+  font-size: 20px;
 }
 
 h2 {
@@ -56,7 +57,7 @@ h2 {
 
 #videoElement {
 	position: absolute;
-	bottom: 0;
-	right: 0;
-	height: 200px;
+	bottom: 10px;
+	right: 10px;
+	height: 250px;
 }
