--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,14 @@
   margin-left: -40px;
 }
 
+#loader {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1000;
+}
+
 .card {
   overflow-y: scroll;
   border: 2px outset;
