--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,6 @@
 }
 
 .card {
-  overflow-y: scroll;
   border: 2px outset;
   margin: 5px;
   padding: 10px;
@@ -84,6 +83,8 @@ h2 {
 .card_jira_description {
   float:left;
   width: 100%;
+  overflow-y: scroll;
+  height: 60px;
 }
 
 .flagged {
