--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,9 +92,10 @@ h2 {
 }
 
 #loader img {
-  width: 400px;
+  width: 200px;
   position: absolute;
-  top: 20%;
+  top: 0;
+  bottom: 0;
   margin: auto;
   left: 0;
   right: 0;
@@ -107,7 +108,18 @@ h2 {
   left: 0;
   right: 0;
   width: 700px;
-  font-size: 36px;
+  font-size: 20px;
   text-align: center;
   bottom: 100px;
+}
+
+#loader input[type="checkbox"] {
+  margin: 10px;
+}
+
+#loader h1 {
+  margin-top: 170px;
+  width: 100%;
+  text-align: center;
+  font-size: 72px;
 }
