--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,12 +3,17 @@
   margin-left: -40px;
 }
 
+.invisible{
+  opacity: 0;
+}
+
 #loader {
   background-color: white;
   width: 100%;
   height: 100%;
   position: absolute;
   z-index: 1000;
+  transition: visibility 0.3s, opacity 0.3s linear;
 }
 
 .card {
