--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,7 +21,7 @@
   border: 2px outset;
   margin: 5px;
   padding: 10px;
-  width: 330px;
+  width: 48%;
   height: 100px;
   float: left;
   -webkit-box-shadow: 4px 4px 5px 0px rgba(50, 50, 50, 0.75);
